@@ -1,0 +1,7 @@
+cbf.szs:Crash Bandicoot Font (black & white):Slawter
+cbc.szs:Crash Bandicoot Font (coloured):Slawter
+drk.szs:Darkness Font:Shadow
+dky.szs:Darky Font:DarkyBenji
+rpp.szs:Ripple Font:CaronHT
+mvb.szs:MV Boli Font:Jorge
+spp.szs:Space Patrol Font:Jorge
