@@ -3,6 +3,7 @@ v4.99:
   not build (RMCP06 - RMCP24 were built "only")
 - mario kart wiimm items: backup the original common.szs on first
   customization of a game
+- mario kart wiimm fonts: support changing font in mario kart
 
 v4.98:
 - mario kart wiimm: when building mario kart wiimm from scratch
